Added some icons for branding

--- a/branding/src/main/nbm-branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
+++ b/branding/src/main/nbm-branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
@@ -1,2 +1,7 @@
 currentVersion=hide {0}
 LBL_splash_window_title=Starting hide
+SPLASH_HEIGHT=600
+SPLASH_WIDTH=800
+SplashProgressBarBounds=0,497,647,6
+SplashRunningTextBounds=88,545,615,16
+SplashRunningTextFontSize=21
